--- a/.github/workflows/auto_merge_prs.yml
+++ b/.github/workflows/auto_merge_prs.yml
@@ -20,4 +20,4 @@ jobs:
         run: gh pr merge --auto --merge "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
-          GH_TOKEN: "${{ secrets.RELEASE_PLZ_PAT }}"
+          GH_TOKEN: "${{ github.token }}"
