--- a/.github/workflows/devskim.yml
+++ b/.github/workflows/devskim.yml
@@ -12,6 +12,9 @@ on:
     branches: [ "master" ]
   schedule:
     - cron: '39 17 * * *'
+  merge_group:
+    types: [checks_requested]
+
 
 jobs:
   lint:
