--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,7 @@ on:
   push:
     branches-ignore:
       - 'release-plz-**'
+      - 'gh-readonly-queue/**'
   workflow_dispatch:
   merge_group:
     types: [checks_requested]
