--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ time = { version = "0.3.36", default-features = false }
 [dependencies]
 aes = { version = "0.8.4", optional = true }
 byteorder = "1.5.0"
-bzip2-rs = { version = "0.1.2", optional = true }
+bzip2 = { version = "0.4.4", optional = true }
 chrono = { version = "0.4.38", optional = true }
 constant_time_eq = { version = "0.3.0", optional = true }
 crc32fast = "1.4.0"
@@ -68,7 +68,7 @@ lzma = ["lzma-rs/stream"]
 unreserved = []
 default = [
     "aes-crypto",
-    "bzip2-rs",
+    "bzip2",
     "deflate",
     "deflate64",
     "deflate-zlib-ng",
